@@ -422,6 +422,10 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.cpp: add more error handling to generateKey () and fix
       up a broken error-handling section.
     - src/onmainwindow.cpp: fix up a few debug strings.
+    - src/{onmainwindow.{cpp,h},configdialog.cpp}: remove userSshd variable
+      and code related to non-user-mode-sshd setups. Simplifies code a bit and
+      we want to always start a user-mode OpenSSH server anyway. Also get rid
+      of the clientport variable that is now unnecessary.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
